<resources>
    <string name="app_name">FavMovies</string>
    <string name="textoprueba">Esto es una prueba</string>
    <string name="titulo">Título</string>
    <string name="tituloPlaceholder">Título de la película</string>
    <string name="argumento">Argumento</string>
    <string name="argumentoPlaceholder">Sinopsis de la película</string>
    <string name="categoria">Categoría</string>
    <string name="editar">Editar</string>
    <string name="duracion">Duración</string>
    <string name="fecha">Fecha de la película</string>
    <string name="guardar">GUARDAR</string>
    <string name="tituloActivityEntrada">FavMovies</string>
    <string name="msg_guardado">Película guardada</string>
    <string name="msg_nueva_categoria">Se va a crear una nueva categoría</string>
    <string name="msg_editar_categoria">Se va a modificar la categoría seleccionada</string>
    <string name="error_campos_sin_rellenar">Campos sin rellenar:</string>
    <string name="titulo_modificar_categoria">Modificación de categoría existente</string>
    <string name="nombre_categoria">Nombre de la categoría</string>
    <string name="descripcion_categoria">Descripción de la categoría</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="titulo_crear_categoria">Creación nueva categoría</string>
    <string name="placeholder_descripcion_categoria">Descripción de la categoría</string>
    <string name="subject_compartir">Compartir película</string>
    <string name="Compartir">Compartir Peli</string>
    <string name="comprueba_conexion">No se ha establecido la conexión. Comprueba tu conexión</string>
    <string name="error_conexion">No se ha establecido la conexión. Por favor, conecta tu movil a Internet y vuelva a intentarlo.</string>
    <string name="title_activity_show_movie">Tenet (2020)</string>
    <string name="action_settings">Settings</string>
    <string name="tenet_categoria">Acción</string>
    <string name="estreno">Fecha de estreno</string>
    <string name="tenet_estreno">26/08/2020</string>
    <string name="tenet_duracion">2h 30m</string>
    <string name="tenet_argumento">Una acción épica que gira en torno al espionaje internacional, los viajes en el tiempo y la evolución, en la que un agente secreto debe prevenir la Tercera Guerra Mundial.</string>
    <string name="desc_caratula">Descripción carátula</string>
</resources>