<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InformacionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin">

        <TextView
            android:id="@+id/text_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/img_caratula"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:contentDescription="@string/desc_caratula"
                android:padding="8sp"
                app:srcCompat="@drawable/tenet_principal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/text_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/tenet_categoria"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_estreno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/tenet_estreno"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_duracion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/tenet_duracion"
                    android:textSize="18sp" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>